<resources>
    <string name="app_name">Basic Calculator App</string>
    <string name="modulus">%</string>
    <string name="save">save</string>
    <string name="history">History</string>
    <string name="seven">7</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="subtract">-</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="fraction">⅟</string>
    <string name="square">x²</string>
    <string name="root">√</string>
    <string name="clearall">AC</string>
    <string name="back">←</string>
    <string name="clear">C</string>
    <string name="opposite">±</string>
    <string name="six">6</string>
    <string name="point">.</string>
    <string name="nine">9</string>
    <string name="five">5</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="eight">8</string>
    <string name="multiply">*</string>
    <string name="equals">=</string>
    <string name="divide">/</string>
    <string name="enter_an_item">Enter an Item</string>
    <string name="history_details">History Details</string>
</resources>